[package]
name = "donburako"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
uuid.workspace = true
tokio = { workspace = true }
tokio-util.workspace = true
thiserror.workspace = true
tracing.workspace = true
fake.workspace = true


console-subscriber = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = []
dev = ["console-subscriber", "tracing-subscriber"]
