[package]
name = "donburako"
version = "0.1.0"
edition = "2021"
authors = ["ShizukaKokoro"]

[dependencies]
uuid = "1"
tokio = "1"
tokio-util = "0"
thiserror = "1"
tracing = "0"
fake = "2"


console-subscriber = { version = "0", optional = true }
tracing-subscriber = { version = "0", optional = true }

[dev-dependencies]
pretty_assertions = "1"

[features]
default = []
dev = ["console-subscriber", "tracing-subscriber"]
