[package]
name = "donburako"
version = "0.1.0"
edition = "2021"
authors = ["ShizukaKokoro"]

[dependencies]
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0"
thiserror = "1"
tracing = "0"
fake = "3"

donburako-macro = { git = "https://github.com/ShizukaKokoro/donburako-macro", branch = "develop" }

console-subscriber = { version = "0", optional = true }
tracing-subscriber = { version = "0", optional = true }

[dev-dependencies]
pretty_assertions = "1"

[features]
default = []
dev = ["console-subscriber", "tracing-subscriber"]
